[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
askama = { version = "0.12.0", features = ["with-axum", "markdown"] }
askama_axum = { version = "0.3.0", features = ["markdown"] }
axum = { version = "0.6.20", features = ["tracing"] }
axum_static = "1.2.2"
chrono = { version = "0.4.26", default-features = false, features = ["time", "std"] }
comrak = { version = "0.18.0", default-features = false, features = ["syntect", "emojis", "arbitrary"] }
console-subscriber = "0.1.10"
rss = { version = "2.0.6", features = ["chrono"] }
tokio = { version = "1.31.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
