[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum", "markdown"] }
askama_axum = { version = "0.4", features = ["markdown"] }
axum = { version = "0.7", features = ["tracing"] }
# temporary fix
axum_static = { git = "https://github.com/paul-asvb/axum_static.git", version = "1.2.3" }
chrono = { version = "0.4.29", default-features = false, features = ["std"] }
comrak = { version = "0.29", default-features = false, features = ["syntect", "emojis", "arbitrary"] }
rss = { version = "2.0.8", features = ["chrono"] }
tokio = { version = "1.31", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
